--- a/public/css/app.css
+++ b/public/css/app.css
@@ -468,23 +468,8 @@ Ensure the default browser behavior of the `hidden` attribute.
 .-top-10 {
   top: -5em !important;
 }
-.-top-40 {
-  top: -20em !important;
-}
-.-top-10 {
-  top: -5em !important;
-}
-.-top-20 {
-  top: -10em !important;
-}
-.-top-10 {
-  top: -5em !important;
-}
 .-top-0 {
   top: -0em !important;
-}
-.-top-10 {
-  top: -5em !important;
 }
 .z-10 {
   z-index: 10 !important;
@@ -582,13 +567,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-left: -0.75rem !important;
   margin-right: -0.75rem !important;
 }
-.-mx-4 {
-  margin-left: -1rem !important;
-  margin-right: -1rem !important;
-}
-.my-2 {
-  margin-top: 0.5rem !important;
-  margin-bottom: 0.5rem !important;
+.-mx-1 {
+  margin-left: -0.25rem !important;
+  margin-right: -0.25rem !important;
 }
 .mb-2 {
   margin-bottom: 0.5rem !important;
@@ -643,9 +624,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .mb-6 {
   margin-bottom: 1.5rem !important;
-}
-.ml-1 {
-  margin-left: 0.25rem !important;
 }
 .block {
   display: block !important;
@@ -740,53 +718,8 @@ Ensure the default browser behavior of the `hidden` attribute.
 .h-56 {
   height: 14rem !important;
 }
-.h-full {
-  height: 100% !important;
-}
 .h-6 {
   height: 1.5rem !important;
-}
-.h-10 {
-  height: 2.5rem !important;
-}
-.h-full {
-  height: 100% !important;
-}
-.h-0 {
-  height: 0px !important;
-}
-.h-20 {
-  height: 5rem !important;
-}
-.h-6 {
-  height: 1.5rem !important;
-}
-.h-10 {
-  height: 2.5rem !important;
-}
-.h-full {
-  height: 100% !important;
-}
-.h-0 {
-  height: 0px !important;
-}
-.h-20 {
-  height: 5rem !important;
-}
-.h-6 {
-  height: 1.5rem !important;
-}
-.h-10 {
-  height: 2.5rem !important;
-}
-.h-full {
-  height: 100% !important;
-}
-.h-0 {
-  height: 0px !important;
-}
-.h-20 {
-  height: 5rem !important;
 }
 .min-h-2\/5-screen {
   min-height: 40vh !important;
@@ -890,35 +823,8 @@ Ensure the default browser behavior of the `hidden` attribute.
 .w-full {
   width: 100% !important;
 }
-.w-1\/2 {
-  width: 50% !important;
-}
 .w-6 {
   width: 1.5rem !important;
-}
-.w-10 {
-  width: 2.5rem !important;
-}
-.w-full {
-  width: 100% !important;
-}
-.w-6 {
-  width: 1.5rem !important;
-}
-.w-10 {
-  width: 2.5rem !important;
-}
-.w-full {
-  width: 100% !important;
-}
-.w-6 {
-  width: 1.5rem !important;
-}
-.w-10 {
-  width: 2.5rem !important;
-}
-.w-full {
-  width: 100% !important;
 }
 .min-w-0 {
   min-width: 0px !important;
@@ -968,9 +874,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .cursor-not-allowed {
   cursor: not-allowed !important;
-}
-.cursor-pointer {
-  cursor: pointer !important;
 }
 .select-none {
   -webkit-user-select: none !important;
@@ -1102,21 +1005,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .rounded-full {
   border-radius: 9999px !important;
 }
-.rounded {
-  border-radius: 0.25rem !important;
-}
-.rounded-full {
-  border-radius: 9999px !important;
-}
-.rounded {
-  border-radius: 0.25rem !important;
-}
-.rounded-full {
-  border-radius: 9999px !important;
-}
-.rounded {
-  border-radius: 0.25rem !important;
-}
 .rounded-t-lg {
   border-top-left-radius: 0.5rem !important;
   border-top-right-radius: 0.5rem !important;
@@ -1132,24 +1020,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .rounded-bl-lg {
   border-bottom-left-radius: 0.5rem !important;
-}
-.rounded-tl-lg {
-  border-top-left-radius: 0.5rem !important;
-}
-.rounded-tr-lg {
-  border-top-right-radius: 0.5rem !important;
-}
-.rounded-tl-lg {
-  border-top-left-radius: 0.5rem !important;
-}
-.rounded-tr-lg {
-  border-top-right-radius: 0.5rem !important;
-}
-.rounded-tl-lg {
-  border-top-left-radius: 0.5rem !important;
-}
-.rounded-tr-lg {
-  border-top-right-radius: 0.5rem !important;
 }
 .rounded-tl-lg {
   border-top-left-radius: 0.5rem !important;
@@ -1210,39 +1080,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .border-r-0 {
   border-right-width: 0px !important;
-}
-.border-t {
-  border-top-width: 1px !important;
-}
-.border-r {
-  border-right-width: 1px !important;
-}
-.border-l {
-  border-left-width: 1px !important;
-}
-.border-b {
-  border-bottom-width: 1px !important;
-}
-.border-t {
-  border-top-width: 1px !important;
-}
-.border-r {
-  border-right-width: 1px !important;
-}
-.border-l {
-  border-left-width: 1px !important;
-}
-.border-b {
-  border-bottom-width: 1px !important;
-}
-.border-t {
-  border-top-width: 1px !important;
-}
-.border-r {
-  border-right-width: 1px !important;
-}
-.border-l {
-  border-left-width: 1px !important;
 }
 .border-b {
   border-bottom-width: 1px !important;
@@ -1349,14 +1186,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-border-opacity: 1 !important;
   border-color: rgb(31 41 55 / var(--tw-border-opacity)) !important;
 }
-.border-blue-200 {
-  --tw-border-opacity: 1 !important;
-  border-color: rgb(191 219 254 / var(--tw-border-opacity)) !important;
-}
-.border-gray-300 {
-  --tw-border-opacity: 1 !important;
-  border-color: rgb(209 213 219 / var(--tw-border-opacity)) !important;
-}
 .border-gray-200 {
   --tw-border-opacity: 1 !important;
   border-color: rgb(229 231 235 / var(--tw-border-opacity)) !important;
@@ -1364,18 +1193,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .border-gray-300 {
   --tw-border-opacity: 1 !important;
   border-color: rgb(209 213 219 / var(--tw-border-opacity)) !important;
-}
-.border-gray-200 {
-  --tw-border-opacity: 1 !important;
-  border-color: rgb(229 231 235 / var(--tw-border-opacity)) !important;
-}
-.border-gray-300 {
-  --tw-border-opacity: 1 !important;
-  border-color: rgb(209 213 219 / var(--tw-border-opacity)) !important;
-}
-.border-gray-200 {
-  --tw-border-opacity: 1 !important;
-  border-color: rgb(229 231 235 / var(--tw-border-opacity)) !important;
 }
 .bg-gray-300 {
   --tw-bg-opacity: 1 !important;
@@ -1528,65 +1345,13 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-bg-opacity: 1 !important;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity)) !important;
 }
-.bg-gray-300 {
+.bg-blue-600 {
   --tw-bg-opacity: 1 !important;
-  background-color: rgb(209 213 219 / var(--tw-bg-opacity)) !important;
-}
-.bg-green-500 {
-  --tw-bg-opacity: 1 !important;
-  background-color: rgb(34 197 94 / var(--tw-bg-opacity)) !important;
-}
-.bg-white {
-  --tw-bg-opacity: 1 !important;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity)) !important;
+  background-color: rgb(37 99 235 / var(--tw-bg-opacity)) !important;
 }
 .bg-gray-200 {
   --tw-bg-opacity: 1 !important;
   background-color: rgb(229 231 235 / var(--tw-bg-opacity)) !important;
-}
-.bg-gray-100 {
-  --tw-bg-opacity: 1 !important;
-  background-color: rgb(243 244 246 / var(--tw-bg-opacity)) !important;
-}
-.bg-gray-300 {
-  --tw-bg-opacity: 1 !important;
-  background-color: rgb(209 213 219 / var(--tw-bg-opacity)) !important;
-}
-.bg-green-500 {
-  --tw-bg-opacity: 1 !important;
-  background-color: rgb(34 197 94 / var(--tw-bg-opacity)) !important;
-}
-.bg-white {
-  --tw-bg-opacity: 1 !important;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity)) !important;
-}
-.bg-gray-200 {
-  --tw-bg-opacity: 1 !important;
-  background-color: rgb(229 231 235 / var(--tw-bg-opacity)) !important;
-}
-.bg-gray-100 {
-  --tw-bg-opacity: 1 !important;
-  background-color: rgb(243 244 246 / var(--tw-bg-opacity)) !important;
-}
-.bg-gray-300 {
-  --tw-bg-opacity: 1 !important;
-  background-color: rgb(209 213 219 / var(--tw-bg-opacity)) !important;
-}
-.bg-green-500 {
-  --tw-bg-opacity: 1 !important;
-  background-color: rgb(34 197 94 / var(--tw-bg-opacity)) !important;
-}
-.bg-white {
-  --tw-bg-opacity: 1 !important;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity)) !important;
-}
-.bg-gray-200 {
-  --tw-bg-opacity: 1 !important;
-  background-color: rgb(229 231 235 / var(--tw-bg-opacity)) !important;
-}
-.bg-gray-100 {
-  --tw-bg-opacity: 1 !important;
-  background-color: rgb(243 244 246 / var(--tw-bg-opacity)) !important;
 }
 .bg-gradient-to-br {
   background-image: linear-gradient(to bottom right, var(--tw-gradient-stops)) !important;
@@ -1735,45 +1500,13 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-top: 1.25rem !important;
   padding-bottom: 1.25rem !important;
 }
-.px-4 {
-  padding-left: 1rem !important;
-  padding-right: 1rem !important;
-}
-.px-3 {
-  padding-left: 0.75rem !important;
-  padding-right: 0.75rem !important;
-}
 .py-2 {
   padding-top: 0.5rem !important;
   padding-bottom: 0.5rem !important;
 }
-.px-2 {
-  padding-left: 0.5rem !important;
-  padding-right: 0.5rem !important;
-}
-.px-3 {
-  padding-left: 0.75rem !important;
-  padding-right: 0.75rem !important;
-}
-.py-2 {
-  padding-top: 0.5rem !important;
-  padding-bottom: 0.5rem !important;
-}
-.px-2 {
-  padding-left: 0.5rem !important;
-  padding-right: 0.5rem !important;
-}
-.px-3 {
-  padding-left: 0.75rem !important;
-  padding-right: 0.75rem !important;
-}
-.py-2 {
-  padding-top: 0.5rem !important;
-  padding-bottom: 0.5rem !important;
-}
-.px-2 {
-  padding-left: 0.5rem !important;
-  padding-right: 0.5rem !important;
+.px-1 {
+  padding-left: 0.25rem !important;
+  padding-right: 0.25rem !important;
 }
 .pl-3 {
   padding-left: 0.75rem !important;
@@ -1826,12 +1559,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .pt-6 {
   padding-top: 1.5rem !important;
 }
-.pt-2 {
-  padding-top: 0.5rem !important;
-}
-.pl-2 {
-  padding-left: 0.5rem !important;
-}
 .text-left {
   text-align: left !important;
 }
@@ -1880,18 +1607,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   font-size: 4.5rem !important;
   line-height: 1 !important;
 }
-.text-xs {
-  font-size: 0.75rem !important;
-  line-height: 1rem !important;
-}
-.text-lg {
-  font-size: 1.125rem !important;
-  line-height: 1.75rem !important;
-}
-.text-sm {
-  font-size: 0.875rem !important;
-  line-height: 1.25rem !important;
-}
 .text-6xl {
   font-size: 3.75rem !important;
   line-height: 1 !important;
@@ -1899,18 +1614,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .text-sm {
   font-size: 0.875rem !important;
   line-height: 1.25rem !important;
-}
-.text-6xl {
-  font-size: 3.75rem !important;
-  line-height: 1 !important;
-}
-.text-sm {
-  font-size: 0.875rem !important;
-  line-height: 1.25rem !important;
-}
-.text-6xl {
-  font-size: 3.75rem !important;
-  line-height: 1 !important;
 }
 .font-semibold {
   font-weight: 600 !important;
@@ -1924,26 +1627,8 @@ Ensure the default browser behavior of the `hidden` attribute.
 .font-black {
   font-weight: 900 !important;
 }
-.font-bold {
-  font-weight: 700 !important;
-}
 .font-semibold {
   font-weight: 600 !important;
-}
-.font-bold {
-  font-weight: 700 !important;
-}
-.font-semibold {
-  font-weight: 600 !important;
-}
-.font-bold {
-  font-weight: 700 !important;
-}
-.font-semibold {
-  font-weight: 600 !important;
-}
-.font-bold {
-  font-weight: 700 !important;
 }
 .uppercase {
   text-transform: uppercase !important;
@@ -2042,49 +1727,17 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-text-opacity: 1 !important;
   color: rgb(34 197 94 / var(--tw-text-opacity)) !important;
 }
-.text-gray-600 {
-  --tw-text-opacity: 1 !important;
-  color: rgb(75 85 99 / var(--tw-text-opacity)) !important;
-}
-.text-blue-700 {
-  --tw-text-opacity: 1 !important;
-  color: rgb(29 78 216 / var(--tw-text-opacity)) !important;
-}
-.text-gray-600 {
-  --tw-text-opacity: 1 !important;
-  color: rgb(75 85 99 / var(--tw-text-opacity)) !important;
-}
 .text-white {
   --tw-text-opacity: 1 !important;
   color: rgb(255 255 255 / var(--tw-text-opacity)) !important;
 }
-.text-gray-700 {
-  --tw-text-opacity: 1 !important;
-  color: rgb(55 65 81 / var(--tw-text-opacity)) !important;
-}
 .text-gray-600 {
   --tw-text-opacity: 1 !important;
   color: rgb(75 85 99 / var(--tw-text-opacity)) !important;
 }
-.text-white {
+.text-\[\#00e396\] {
   --tw-text-opacity: 1 !important;
-  color: rgb(255 255 255 / var(--tw-text-opacity)) !important;
-}
-.text-gray-700 {
-  --tw-text-opacity: 1 !important;
-  color: rgb(55 65 81 / var(--tw-text-opacity)) !important;
-}
-.text-gray-600 {
-  --tw-text-opacity: 1 !important;
-  color: rgb(75 85 99 / var(--tw-text-opacity)) !important;
-}
-.text-white {
-  --tw-text-opacity: 1 !important;
-  color: rgb(255 255 255 / var(--tw-text-opacity)) !important;
-}
-.text-gray-700 {
-  --tw-text-opacity: 1 !important;
-  color: rgb(55 65 81 / var(--tw-text-opacity)) !important;
+  color: rgb(0 227 150 / var(--tw-text-opacity)) !important;
 }
 .underline {
   -webkit-text-decoration-line: underline !important;
@@ -13542,10 +13195,6 @@ body {
   --tw-bg-opacity: 1 !important;
   background-color: rgb(254 202 202 / var(--tw-bg-opacity)) !important;
 }
-.hover\:bg-gray-200:hover {
-  --tw-bg-opacity: 1 !important;
-  background-color: rgb(229 231 235 / var(--tw-bg-opacity)) !important;
-}
 .hover\:text-white:hover {
   --tw-text-opacity: 1 !important;
   color: rgb(255 255 255 / var(--tw-text-opacity)) !important;
@@ -13816,10 +13465,6 @@ body {
     width: 18rem !important;
   }
 
-  .md\:w-1\/2 {
-    width: 50% !important;
-  }
-
   .md\:flex-auto {
     flex: 1 1 auto !important;
   }
@@ -13867,11 +13512,6 @@ body {
   .lg\:my-8 {
     margin-top: 2rem !important;
     margin-bottom: 2rem !important;
-  }
-
-  .lg\:my-1 {
-    margin-top: 0.25rem !important;
-    margin-bottom: 0.25rem !important;
   }
 
   .lg\:my-1 {
@@ -14003,14 +13643,6 @@ body {
     width: 16.666667% !important;
   }
 
-  .lg\:w-full {
-    width: 100% !important;
-  }
-
-  .lg\:w-1\/2 {
-    width: 50% !important;
-  }
-
   .lg\:grid-cols-4 {
     grid-template-columns: repeat(4, minmax(0, 1fr)) !important;
   }
@@ -14031,22 +13663,9 @@ body {
     border-top-width: 1px !important;
   }
 
-  .lg\:border-b {
-    border-bottom-width: 1px !important;
-  }
-
-  .lg\:border-t {
-    border-top-width: 1px !important;
-  }
-
   .lg\:px-0 {
     padding-left: 0px !important;
     padding-right: 0px !important;
-  }
-
-  .lg\:py-1 {
-    padding-top: 0.25rem !important;
-    padding-bottom: 0.25rem !important;
   }
 
   .lg\:py-1 {
@@ -14116,25 +13735,12 @@ body {
     width: 50% !important;
   }
 
-  .xl\:w-1\/2 {
-    width: 50% !important;
-  }
-
   .xl\:grid-cols-6 {
     grid-template-columns: repeat(6, minmax(0, 1fr)) !important;
   }
 
   .xl\:border-none {
     border-style: none !important;
-  }
-
-  .xl\:border-none {
-    border-style: none !important;
-  }
-
-  .xl\:text-xl {
-    font-size: 1.25rem !important;
-    line-height: 1.75rem !important;
   }
 
   .xl\:text-xl {
